# fox-ess-discharge-predictor

./: .eslintrc.yml  .gitignore  .gitlab-ci.yml  .prettierrc.yml  AGENTS.md  README.md  SPEC.md  cdk.json  eslint.config.js  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  runbook.md  skills-lock.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml
src/: stack.ts
src/lambda/: foxess_client.py  index.py  requirements.txt  test_foxess_client.py  test_index.py
test/: stack.test.ts
